# crewai-april-updates

./: .env.example  .gitignore  CLAUDE.md  README.md  crewai-showcase-slides.html  index.html  pyproject.toml
.github/workflows/: pages.yml
notebooks/: 00_build_with_ai.ipynb  01_agent_skills.ipynb  02_plan_and_execute.ipynb  03_unified_memory.ipynb  04_checkpointing.ipynb  05_a2a.ipynb
skills/citation-skill/: SKILL.md
skills/researcher-skill/: SKILL.md
src/showcase/: __init__.py  _patches.py
src/showcase/flows/: a2a_flow.py  checkpoint_flow.py  memory_flow.py  planning_flow.py  skills_flow.py
src/showcase/shared/: __init__.py  llm.py
