[project]
name = "crewai-april-feature-showcase"
version = "0.1.0"
description = "Follow-along showcase of six notable CrewAI 2026 features: Build with AI, Agent Skills, Plan-and-Execute, Unified Memory, Checkpointing, and A2A."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[a2a,anthropic,qdrant,tools]==1.14.3a3",
    "openai>=2.0.0",
    "anthropic>=0.73.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "rich>=13.9.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "notebook>=7.2.0",
    "daytona>=0.140.0",
    "exa-py>=2.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/showcase"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]
